// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserGroup /> should render with [toggled=false] 1`] = `
<Group__StyledUserGroup
  active={false}
  onClick={[Function]}
>
  <Checkbox
    checked={false}
    disabled={false}
    label="bob"
  />
</Group__StyledUserGroup>
`;

exports[`<UserGroup /> should render with [toggled=true] 1`] = `
<Group__StyledUserGroup
  active={true}
  onClick={[Function]}
>
  <Checkbox
    checked={true}
    disabled={false}
    label="bob"
  />
</Group__StyledUserGroup>
`;
